<resources>
    <string name="app_name">Wallet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="montserrat">montserrat</string>

    <string name="action_settings">Settings</string>
    <string name="add">Dodaj</string>
    <string name="cancel">Anuluj</string>
    <string name="PLN">zł</string>
    <string name="txt_new_operation">Nowa operacja</string>
    <string name="new_template">Nowy szablon</string>
    <string name="search_title">Wyszukaj</string>
    <string name="kategorie">Kategorie</string>
    <string name="txt_new_standing_operation">Nowe zlecenie stałe</string>
    <string name="nazwa_portfela_PL">Podaj nazwę portfela</string>
    <string name="dodaj_portfel">Dodaj portfel</string>
    <string name="waluta">Waluta:</string>
    <string name="nazwa_kategorii">Nazwa kategorii</string>
    <string name="new_cat_string">Nowa kategoria</string>
    <string name="new_wallet_string">Nowy portfel</string>
    <string name="edytuj_operacj_txt">Edytuj operację</string>
    <string name="choose_date">Wybierz datę</string>
    <string name="last_operation_txt">Ostatnie operacje</string>
    <string name="stan_konta_string">Stan konta:</string>
    <string name="templets">Szablony</string>
    <string name="add_operation_txt">Ok</string>
    <string name="desc_category_icon">category icon</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="sweet_home_alabama">Sweet home Alabama</string>
    <string name="desc_user_icon">user icon</string>
    <string name="amount_txt">Kwota</string>
    <string name="txt_tytu_opcjonalnie">Tytuł(opcjonalnie)</string>
    <string name="desc_ikona_portfela">ikona portfela</string>
    <string name="czy_jest_wydatkiem">czy jest wydatkiem</string>
    <string name="influecne">Wpływ</string>
    <string name="spendings">Wydatek</string>
    <string name="desc_data">data</string>
    <string name="from_txt">Od:</string>
    <string name="date_txt">data</string>
    <string name="to_txt">Do:</string>
    <string name="balance_txt">Saldo:</string>
    <string name="Add">Dodaj</string>
    <string-array name="examples">
        <item>Array item</item>
        <item>Array item</item>
        <item>Array item</item>
    </string-array>
    <string-array name="currencies">
        <item>PLN</item>
        <item>GBP</item>
        <item>USD</item>
        <item>CHK</item>
        <item>AUD</item>
    </string-array>
</resources>
