<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="30sp"
            android:ems="10"
            android:id="@+id/kwotaEdytowanejOperacji"
            android:hint="@string/amount_txt"
            android:gravity="end"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/PLN"
            android:id="@+id/textView8"
            android:textSize="40sp"
            android:singleLine="true"
            android:gravity="bottom"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/kwotaEdytowanejOperacji" />
    </RelativeLayout>

    <EditText
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tytulEdytowanejOperacji"
        android:hint="@string/txt_tytu_opcjonalnie"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin">
    <ImageView
        android:contentDescription="@string/desc_category_icon"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_category_choose"
        android:tint="#fff"
        android:id="@+id/imageView3" />
        <Spinner
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/categoriesSpinner"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageView3"
            android:layout_toEndOf="@+id/imageView3" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin">
    <ImageView
        android:contentDescription="@string/desc_ikona_portfela"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/wallet"
        android:tint="#fff"
        android:id="@+id/imageView4" />
        <Spinner
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/walletsSpinner"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/imageView4" />
    </RelativeLayout>


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_marginTop="@dimen/list_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/wplywLubWydatekEdytowanejOperacji">
        <ImageView
            android:contentDescription="@string/czy_jest_wydatkiem"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_is_income"
            android:tint="#fff"/>
        <RadioButton
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/influecne"
            android:id="@+id/radioButton" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spendings"
            android:id="@+id/wydatekEdytowanejOperacji"
            android:checked="true"/>
    </RadioGroup>

    <LinearLayout
        android:layout_marginTop="@dimen/list_margin"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:contentDescription="@string/desc_data"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_calendar"
            android:tint="#fff"/>

        <Button
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="data"
            android:id="@+id/datePickerBtn" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edytuj_operacj_txt"
        android:id="@+id/editPositionBtn"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</LinearLayout>
