<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <EditText
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="30sp"
            android:ems="10"
            android:id="@+id/kwotaNowejKategorii"
            android:hint="Kwota"
            android:gravity="right"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/PLN"
            android:id="@+id/textView8"
            android:textSize="40sp"
            android:singleLine="true"
            android:gravity="bottom"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/kwotaNowejKategorii" />
    </RelativeLayout>

        <EditText
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tytulNowejOperacji"
            android:hint="Tytuł(opcjonalnie)"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin">
            <ImageView
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_category_choose"
                android:tint="#fff"
                android:id="@+id/imageView3" />
            <Spinner
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/categoriesSpinner"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/imageView3"
                android:layout_toEndOf="@+id/imageView3" />

        </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">
        <ImageView
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wallet"
            android:tint="#fff"
            android:id="@+id/imageView4" />
        <Spinner
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/walletsSpinner"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageView4"
            android:layout_toEndOf="@+id/imageView4"/>
    </RelativeLayout>


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_marginTop="@dimen/list_margin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:id="@+id/wplywLubWydatekNowejOperacji">
            <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_is_income"
            android:tint="#fff"/>
            <RadioButton
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wpływ"
                android:id="@+id/radioButton"
                android:layout_below="@+id/wplywNowejOperacji"
                android:layout_alignLeft="@+id/datePicker3"
                android:layout_alignStart="@+id/datePicker3" />
            <RadioButton
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wydatek"
                android:id="@+id/wydatekNowejOperacji"
                android:checked="true"/>
        </RadioGroup>

    <LinearLayout
        android:layout_marginTop="@dimen/list_margin"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_calendar"
            android:tint="#fff"/>

        <Button
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="data"
            android:id="@+id/datePickerBtn" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_operation_txt"
        android:id="@+id/addPositionBtn"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/templets"
        android:id="@+id/useTemplateBtn"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"/>

</LinearLayout>
